tests/ui/borrowck/issue-81899.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
  ::: $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: the evaluated program panicked at 'explicit panic', $DIR/issue-81899.rs:11:5
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
   |
  ::: $DIR/issue-81899.rs:11:5
   |
LL |     panic!()
   |     --------
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
   |
note: inside `f::<[closure@$DIR/issue-81899.rs:4:31: 4:34]>`
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
   |
  ::: $DIR/issue-81899.rs:11:5
   |
LL |     panic!()
   |     --------
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
note: inside `_CONST`
  --> $DIR/issue-81899.rs:4:24
   |
LL | const _CONST: &[u8] = &f(&[], |_| {});
   |                        ^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/issue-81899.rs:4:23
   |
LL | const _CONST: &[u8] = &f(&[], |_| {});
   |                       ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
